logout işlemi ve veritabanı yolu düzenlendi

--- a/templates/include/navbar.html
+++ b/templates/include/navbar.html
@@ -18,10 +18,21 @@
                 <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
             </li>
         </ul>
-        <form class="form-inline my-2 my-lg-0">
-            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-        </form>
+        <ul class="navbar-nav float-right">
+            {% if session['logged_in'] %}
+                <li class="nav-item">
+                    <a class="nav-link " href="/logout" tabindex="-1">Çıkış Yap</a>
+                </li>
+            {% else %}
+                <li class="nav-item">
+                    <a class="nav-link " href="/login" tabindex="-1">Giriş Yap</a>
+                </li>
+
+            {% endif %}
+
+
+        </ul>
+
     </div>
 </nav>
 
