--- a/templates/post/add_post.html
+++ b/templates/post/add_post.html
@@ -5,21 +5,35 @@
 {% block ust_icerik %}
 
 {% endblock %}
-
+<style>
+    #editor {
+        width: 100px;
+    }
+</style>
 {% block icerik %}
     <div class="row">
         <div class="col-lg-12">
             <div class="col-lg-8 offset-lg-2">
                 <h3 class="page-header">Post Oluştur</h3>
                 <form method=post>
+
                     {{ render_field(form.title,class="form-control" ) }}
-                    {{ render_field(form.content,class="form-control" ) }}
+                    {{ render_field(form.content,class="form-control", id='editor' ) }}
+
                     <input class="btn btn-info btn-block" type="submit" value="Create">
                 </form>
+
             </div>
 
         </div>
 
     </div>
+    <script>
+        ClassicEditor
+            .create(document.querySelector('#editor'))
+            .catch(error => {
+                console.error(error);
+            });
+    </script>
 
 {% endblock %}
