--- a/templates/base.html
+++ b/templates/base.html
@@ -16,9 +16,7 @@
             crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
           integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <script src="https://cdn.ckeditor.com/ckeditor5/15.0.0/classic/ckeditor.js"></script>
-
-    <link rel="stylesheet" href="path/to/assets/content-styles.css" type="text/css">
+    <script src="//cdn.ckeditor.com/4.13.0/full/ckeditor.js"></script>
 
     <title>Document</title>
 </head>
