--- a/templates/post/add_post.html
+++ b/templates/post/add_post.html
@@ -5,11 +5,7 @@
 {% block ust_icerik %}
 
 {% endblock %}
-<style>
-    #editor {
-        width: 100px;
-    }
-</style>
+
 {% block icerik %}
     <div class="row">
         <div class="col-lg-12">
@@ -29,11 +25,7 @@
 
     </div>
     <script>
-        ClassicEditor
-            .create(document.querySelector('#editor'))
-            .catch(error => {
-                console.error(error);
-            });
+        CKEDITOR.replace('editor');
     </script>
 
 {% endblock %}
