post list sayfası oluşturuldu

--- a/templates/base.html
+++ b/templates/base.html
@@ -28,10 +28,17 @@
     {% include "include/messages.html" %}
 
 {% endblock %}
+<div class="row">
+    <div class="col-lg-12">
+        <div class="col-lg-8 offset-lg-2">
+            {% block icerik %}
 
-{% block icerik %}
 
-{% endblock %}
+            {% endblock %}
+
+        </div>
+    </div>
+</div>
 
 
 </body>
