--- a/app/templates/include/navbar.html
+++ b/app/templates/include/navbar.html
@@ -13,6 +13,9 @@
             <li class="nav-item">
                 <a class="nav-link " href="/add_post" tabindex="-1" aria-disabled="true">Post Oluştur</a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link " href="/word_exercise" tabindex="-1" aria-disabled="true">Kelime Egzersizi</a>
+            </li>
         </ul>
         <ul class="navbar-nav float-right">
             {% if session['logged_in'] %}
