--- a/app/templates/include/navbar.html
+++ b/app/templates/include/navbar.html
@@ -14,7 +14,7 @@
                 <a class="nav-link " href="/add_post" tabindex="-1" aria-disabled="true">Post Oluştur</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link " href="/word_exercise" tabindex="-1" aria-disabled="true">Kelime Egzersizi</a>
+                <a class="nav-link " href="/word_exercise_list" tabindex="-1" aria-disabled="true">Kelime Egzersizi</a>
             </li>
         </ul>
         <ul class="navbar-nav float-right">
