requirements.txt güncellendi

--- a/app/templates/include/navbar.html
+++ b/app/templates/include/navbar.html
@@ -16,6 +16,9 @@
             <li class="nav-item">
                 <a class="nav-link " href="/word_exercise_list" tabindex="-1" aria-disabled="true">Kelime Egzersizi</a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link " href="/word_create" tabindex="-1" aria-disabled="true">Kelime Ekle</a>
+            </li>
         </ul>
         <ul class="navbar-nav float-right">
             {% if session['logged_in'] %}
@@ -34,6 +37,3 @@
 
     </div>
 </nav>
-
-
-
