--- a/app/templates/post/post_detail.html
+++ b/app/templates/post/post_detail.html
@@ -2,6 +2,8 @@
 
 {% block ust_icerik %}
 
+
+
 {% endblock %}
 
 {% block icerik %}
@@ -9,7 +11,10 @@
         <h3 class="page-header">{{ post.title }}</h3>
 
         <hr>
-        {{ post.content|safe }}
+        {% filter escape %}
+            {{ post_content|safe }}
+        {% endfilter %}
+
         <div>     {% if  session.username == post.author or session.username == 'admin' %}
             <a href="/post_update/{{ post.id }}" class="btn btn-success">Güncelle</a>
         {% endif %} </div>
