--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -22,7 +22,8 @@
     <script src="//cdn.ckeditor.com/4.13.0/full/ckeditor.js"></script>
     <link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='styles/style.css') }}">
 
-
+    <script type="text/javascript"
+            src="{{ url_for('static', filename='node_modules/markdown/lib/markdown.js') }}"></script>
     <title>Document</title>
 </head>
 <body>
