post_detail, add_post, post_update güncellendi

--- a/app/templates/post/add_post.html
+++ b/app/templates/post/add_post.html
@@ -12,6 +12,7 @@
     <form method=post>
 
 
+        {{ render_field(form.unit,class="form-control" ) }}
         {{ render_field(form.title,class="form-control" ) }}
         {{ render_field(form.content,class="form-control", id='editor' ) }}
 
