--- a/app/templates/post/post_list.html
+++ b/app/templates/post/post_list.html
@@ -10,6 +10,7 @@
     <table class="table ">
         <thead class="thead-dark">
         <tr>
+            <th scope="col">Unit</th>
             <th scope="col">Başlık</th>
             <th scope="col">Yazar</th>
             <th scope="col">Tarih</th>
@@ -18,7 +19,7 @@
         {% for post in posts %}
 
             <tbody>
-
+            <td> {{ post.unit }}</td>
             <td><a href="/post/{{ post.id }}"> {{ post.title }}</a></td>
             <td>{{ post.author }}</td>
             <td>{{ post.date_posted }}</td>
