--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -5,6 +5,7 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+<link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='css/style.css') }}">
 
 
     <script src="https://code.jquery.com/jquery-3.4.1.js"
@@ -20,10 +21,8 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
           integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <script src="//cdn.ckeditor.com/4.13.0/full/ckeditor.js"></script>
-    <link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='styles/style.css') }}">
 
-    <script type="text/javascript"
-            src="{{ url_for('static', filename='node_modules/markdown/lib/markdown.js') }}"></script>
+
     <title>Document</title>
 </head>
 <body>
