--- a/app/templates/word/word_exercise.html
+++ b/app/templates/word/word_exercise.html
@@ -4,7 +4,6 @@
     <script src="https://code.jquery.com/jquery-3.4.1.js"
             integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" crossorigin="anonymous"></script>
     <script type="text/javascript" rel="script">
-
         var a = JSON.parse('{{ value|tojson|safe }}');
 
         function change_value(a) {
@@ -15,33 +14,27 @@
             return name
         }
 
-
         $(document).ready(function () {
+
+            var working_type = $('input[name=options]:checked').val();
+            console.log(working_type);
             var true_count = 0;
             var false_count = 0;
             var value = change_value(a);
-
             $this = $(this);
             var word = value.eng_word;
             var tr_word = value.turk_word;
-            console.log(tr_word);
-
-            console.log(tr_word.includes('İngilizce bilmiyorum'));
-
             $this.find('#value').html(word);
             $('.tebrikler ').hide();
 
-            $('.girilen').on('keyup', function (e ) {
+
+            $('.girilen').on('keyup', function (e) {
                 e.preventDefault();
                 var girilen = $this.find('.girilen').val();
                 console.log('girilen: ' + girilen + ' word:' + tr_word);
-
                 if (tr_word.includes(girilen.toLowerCase())) {
-
                     $('.tebrikler').show();
-
                     var delayInMilliseconds = 1000;
-
                     setTimeout(function () {
                         true_count++;
                         $('.dogru_bilinen').append(word + ' -> ' + tr_word + '</br>');
@@ -52,19 +45,15 @@
                         tr_word = new_word.turk_word;
                         $('.girilen').val('');
                         $('.tebrikler ').hide();
-
                     }, delayInMilliseconds);
-
-
                 }
             });
+
+
             $('.skip').on('click', function (e) {
-
+                e.preventDefault();
                 var delayInMilliseconds = 1000;
-
                 setTimeout(function () {
-
-                    e.preventDefault();
                     $('.yanlis_bilinen').append(word + ' -> ' + tr_word + '</br>');
                     false_count++;
                     $('.false_count').html(false_count);
@@ -72,16 +61,16 @@
                     $this.find('#value').html(new_word.eng_word);
                     word = new_word.eng_word;
                     tr_word = new_word.turk_word;
-
-
                     $('.girilen').val('');
                 }, delayInMilliseconds);
-            })
+            });
+
+            $("#eng_tr").change(function () {
+                console.log('saü');
+            });
 
 
         });
-
-
     </script>
 
 
@@ -92,6 +81,21 @@
 {% block icerik %}
 
     <div class="col-12">
+
+        <div style="margin-top: 20px;" class="row h-100 justify-content-center align-items-center">
+            <div class="btn-group btn-group-toggle" data-toggle="buttons">
+                <label class="btn btn-info active">
+                    <input type="radio" name="options" id="eng_tr" value="eng_tr" autocomplete="off" checked> Eng-Tr
+                </label>
+                <label class="btn btn-info">
+                    <input type="radio" name="options" class="tr_eng" value="tr_eng" autocomplete="off"> Tr-Eng
+                </label>
+
+            </div>
+
+        </div>
+
+
         <div style=" background: #35b0ab; border-radius:25px;  height: 50px; text-align: center; margin-top: 50px; "
              class="offset-lg-0 info">
 
