--- a/app/templates/word/word_exercise.html
+++ b/app/templates/word/word_exercise.html
@@ -14,27 +14,40 @@
             return name
         }
 
-        $(document).ready(function () {
+        var question_type = 'karisik_sor';
+        var true_count = 0;
+        var false_count = 0;
+        var question = '';
+        var q_answer = '';
 
-            var working_type = $('input[name=options]:checked').val();
-            var question_type = 'karisik_sor';
-            var true_count = 0;
-            var false_count = 0;
-            var value = change_value(a);
-            var question = null;
-            var q_answer = null;
-            $this = $(this);
+        function change_question(working_type, value) {
             if (working_type == 'eng_tr') {
                 question = value.eng_word;
                 q_answer = value.turk_word;
             } else {
                 question = value.turk_word;
                 q_answer = value.eng_word;
+
+            }
+            if (question.length > 1) {
+                var show_question = question[0];
+                for (i = 1; i < question.length; i++) {
+                    show_question += ', ' + question[i];
+                }
+                $this.find('#value').html(show_question);
+            } else {
+                $this.find('#value').html(question);
+
             }
 
-            console.log(question, q_answer);
+        }
 
-            $this.find('#value').html(question);
+        $(document).ready(function () {
+
+            var working_type = $('input[name=options]:checked').val();
+            var value = change_value(a);
+            $this = $(this);
+            change_question(working_type, value);
             $('.tebrikler ').hide();
 
             $('#languageForm input').on('change', function () {
@@ -42,26 +55,12 @@
                 if (working_type == 'tr_eng') {
                     $('.eng-tr-label').removeClass("active");
                     $(".tr-eng-label").addClass("active");
-                    if (working_type == 'eng_tr') {
-                        question = value.eng_word;
-                        q_answer = value.turk_word;
-                    } else {
-                        question = value.turk_word;
-                        q_answer = value.eng_word;
-                    }
-                    $this.find('#value').html(question);
+                    change_question(working_type, value)
+
                 } else {
                     $('.tr-eng-label').removeClass("active");
                     $(".eng-tr-label").addClass("active");
-                    if (working_type == 'eng_tr') {
-                        question = value.eng_word;
-                        q_answer = value.turk_word;
-                    } else {
-                        question = value.turk_word;
-                        q_answer = value.eng_word;
-                    }
-                    $this.find('#value').html(question);
-
+                    change_question(working_type, value);
                 }
             });
 
@@ -84,19 +83,11 @@
                     if (q_answer.includes(answer.toLowerCase())) {
                         $('.tebrikler').show();
                         true_count++;
-                        $('.dogru_bilinen').append(question + ' -> ' + q_answer + '</br>');
+                        $('.dogru_bilinen').prepend(question + ' -> ' + q_answer + '</br>');
                         $('.true_count').html(true_count);
-                         value = change_value(a);
-                        if (working_type == 'eng_tr') {
-                            question = value.eng_word;
-                            q_answer = value.turk_word;
-                            $this.find('#value').html(value.eng_word);
+                        value = change_value(a);
+                        change_question(working_type, value);
 
-                        } else {
-                            question = value.turk_word;
-                            q_answer = value.eng_word;
-                            $this.find('#value').html(value.tr_word);
-                        }
                         $('.answer').val('');
                         var delayInMilliseconds = 1000;
                         setTimeout(function () {
@@ -106,19 +97,14 @@
                 }
             );
 
-
             $('.skip').on('click', function (e) {
                 e.preventDefault();
 
-                $('.yanlis_bilinen').append(question + ' -> ' + q_answer + '</br>');
+                $('.yanlis_bilinen').prepend(question + ' -> ' + q_answer + '</br>');
                 false_count++;
                 $('.false_count').html(false_count);
                 var value = change_value(a);
-                $this.find('#value').html(value.eng_word);
-
-                question = value.eng_word;
-                q_answer = value.turk_word;
-
+                change_question(working_type, value);
                 $('.answer').val('');
                 var delayInMilliseconds = 1000;
                 setTimeout(function () {
@@ -182,18 +168,20 @@
         </div>
 
 
-        <div style="text-align: center; margin-top: 100px;" class="">
+        <div style=" height: 25px; text-align: center; margin-top: 20px; margin-bottom: 20px;">
             <p class="text-success tebrikler"> Tebrikler doğru bildiniz. </p>
         </div>
 
 
         <div class="col-lg-12">
-            <div style="text-align:center" class="col-lg-6 text-success float-left dogru_bilinen"><h3
+            <div style="text-align:center" class="col-lg-6 text-success float-left "><h3
                     class="text-info page-header"> Doğru Bildikleriniz (<span class="true_count">0</span>)</h3>
-
+                <div class="dogru_bilinen"></div>
             </div>
-            <div style="text-align: center;" class="col-lg-6 text-danger float-left yanlis_bilinen"><h3
-                    class="page-header">Yanlış Bildikleriniz (<span class="false_count">0</span>)</h3></div>
+            <div style="text-align: center;" class="col-lg-6 text-danger float-left "><h3
+                    class="page-header"> Bilemedikleriniz (<span class="false_count">0</span>)</h3>
+                <div class="yanlis_bilinen"></div>
+            </div>
         </div>
 
     </div>
